<resources>
    <string name="app_name">Tweeter</string>

    <string name="homePageTitle">Home</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="loadingData">Loading More Data…</string>
    <string name="feedTabTitle">Feed</string>
    <string name="storyTabTitle">Story</string>
    <string name="followingTabTitle">Following</string>
    <string name="followersTabTitle">Followers</string>

    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="first_name_sign_up">First Name</string>
    <string name="last_name_sign_up">Last Name</string>
    <string name="upload_photo">Upload Photo</string>

    <string name="sample_post">Message</string>

    <string name="sign_out">Sign Out</string>

    <string name="post">Post</string>
    <string name="post_prompt">Post a new Status:</string>
    <string name="post_hint">Write something here</string>


    <string name="follow_button">Follow</string>
    <string name="unfollow_button">Unfollow</string>



    <string name="sampleAlias">"@UserAlias"</string>
    <string name="sampleUserName">The User</string>
    <string name="app">Twitter</string>
    <string name="login">Username</string>
    <string name="username">Twitter Username</string>
    <string name="password">Password you created</string>
    <string name="firstName">Your First Name</string>
    <string name="LastName">Your Last Name</string>
    <string name="message">Status</string>
    <string name="status_hint">How are you feeling???</string>
    <string name="timeStamp">TIME:</string>
</resources>
