<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#FFF">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/post_prompt"
            android:textSize="5pt"/>

        <EditText
            android:id="@+id/postMessage"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:layout_margin="16dp"
            android:textSize="8pt"
            android:hint="@string/post_hint"/>

        <Button
            android:id="@+id/postButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:textSize="8pt"
            android:onClick="postStatus"/>
    </LinearLayout>
</RelativeLayout>